# aws-mcp-server

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  llms.txt  progress-mcp-spec-updates.txt  pyproject.toml  smithery.yaml  spec.md
.github/workflows/: ci.yml  release.yml
deploy/docker/: Dockerfile  docker-compose.yml
docs/: DEVELOPMENT.md  SECURITY.md  USAGE.md  VERSION.md
docs/plans/: mcp-spec-updates.md
src/aws_mcp_server/: __init__.py  __main__.py  cli_executor.py  config.py  prompts.py  resources.py  sandbox.py  security.py  server.py  tools.py
tests/: conftest.py  test_aws_integration.py
tests/integration/: test_aws_live.py  test_server_integration.py
tests/unit/: test_cli_executor.py  test_config.py  test_init.py  test_main.py  test_prompts.py  test_resources.py  test_sandbox.py  test_security.py  test_server.py  test_tools.py
